# narrator

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  IDEA.md  LICENSE  README.md  SECURITY.md  SPEC.md  TESTING.md  config.example.toml  pyproject.toml  requirements-lock.txt  requirements.txt  run.bat  run_audio_selftest.bat  run_narrator.bat  run_narrator_tray.bat  setup.bat  setup.sh
.github/workflows/: ci.yml
docs/: AUDIO_SELFTEST.md  DEBUG_MULTIPLE_VOICES.md  GLITCH_REGRESSION.md  REPO_LAYOUT.md  SETUP.md  SPEAK_TEXT_LLM.md  TTS_PLAYBACK_ROADMAP.md  TTS_VOICE_CLEANING.md  VOXCPM_LATENCY.md
narrator/: __main__.py  audio_debug.py  audio_pcm.py  audio_sounddevice_play.py  audio_stream_compile.py  capture.py  default_speak_text_llm_rules.txt  dpi.py  hotkey.py  playback_control.py  playback_result.py  playback_telemetry.py  protocol.py  segment_transitions.py  settings.py  settings_schema.md  speak_chunking.py  speak_preprocess.py  speak_prosody.py  speak_text_llm.py  speak_warmup.py  speech.py  tray_mode.py  tts_piper.py  tts_xtts.py  user_state.py  voices.py  voxcpm_text_pipeline.py  wav_play_win32.py  wav_speaking_rate.py  win32_hotkey_hook.py  win_console.py  worker.py
narrator/listen/: __init__.py  insert_text.py  punctuate_heuristic.py  punctuate_neural.py  session.py  stt_winrt.py  whisper_listen.py  whisper_subprocess.py
scripts/: analyze_audio_recordings.py  audio_inference_selftest.py  audio_loopback_record.py  bootstrap_install.py  build_exe.ps1  ensure_cuda_torch.py  ensure_ollama_running.bat  hw_detect.py  prefetch_piper_voice.py  prefetch_utils.py  prefetch_xtts_model.py  pyinstaller_entry.py  pytorch_cuda_wheels.py  repair_piper_env.ps1  setup_ollama_speak_llm.py  setup_terminal.py  smoke_test.py  tts_quality_perf_sweep.py  tts_speed_diagnostics.py  verify_integration.py  verify_setup.py
tests/: test_analyze_audio_recordings.py  test_audio_inference_selftest.py  test_audio_pcm.py  test_audio_stream_compile.py  test_prefetch_utils.py  test_segment_transitions.py  test_speak_chunking.py  test_speak_preprocess.py  test_speak_preprocess_paper.py  test_speak_text_llm.py  test_speak_warmup_smoke.py  test_tts_quality_perf_sweep.py  test_user_state.py  test_voxcpm_text_pipeline.py  test_wav_play_win32.py
